# rust_backend

./: .gitattributes  .gitignore  Cargo.toml
src/: config.rs  db.rs  main.rs  routes.rs
src/handler/: tasks.rs
src/models/: mod.rs  task.rs  taskmod.rs
src/routes/: health.rs  mod.rs  tasks.rs
