[package]
name = "tasky-task-manager"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
hyper = "1.6"
tokio ={ version = "1.4", features = ["full"]} 
chrono ="0.4" 
uuid = { version = "1.4.1", features = ["serde", "v4"] }
dotenv = "0.15"
tracing-subscriber = "0.3.18"
async-trait = "0.1.88"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tower-http = { version = "0.6.2", features = ["cors","trace"] }
